@@ -382,3 +382,7 @@
 	* Entry: Replaced edje_object_part_text_style_user_set/get 
 	with edje_object_part_text_style_user_set/get to correspond to
 	textblock's recent changes.
+
+2012-03-07  Cedric Bail
+
+	* Correctly count and propagate preload signal with GROUP.
